force-app/main/default/objects/Opportunity_Annual_Value__c/Opportunity_Annual_Value__c.object-meta.xml
<CustomObject>
    <label>Opportunity Annual Value</label>
    <nameField>
        <displayFormat>OAV-{0000}</displayFormat>
        <label>Opportunity Annual Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Annual Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>