force-app/main/default/objects/Opportunity_Annual_Value__c/fields/Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Value__c</fullName>
    <label>Annual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>