force-app/main/default/objects/Opportunity_Annual_Value__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <label>Financial Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FY16/17</fullName>
            </value>
            <value>
                <fullName>FY17/18</fullName>
            </value>
            <value>
                <fullName>FY18/19</fullName>
            </value>
            <value>
                <fullName>FY19/20</fullName>
            </value>
            <value>
                <fullName>FY20/21</fullName>
            </value>
            <value>
                <fullName>FY21/22</fullName>
            </value>
            <value>
                <fullName>FY22/23</fullName>
            </value>
            <value>
                <fullName>FY23/24</fullName>
            </value>
            <value>
                <fullName>FY24/25</fullName>
            </value>
            <value>
                <fullName>FY25/26</fullName>
            </value>
            <value>
                <fullName>FY26/27</fullName>
            </value>
            <value>
                <fullName>FY27/28</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>