force-app/main/default/objects/Opportunity_Annual_Value__c/fields/Financial_Year_Date__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year_Date__c</fullName>
    <label>Financial Year (Date)</label>
    <type>Date</type>
</CustomField>